# arba-appt

./: .clang-format  CMake-package-config.cmake.in  CMakeLists.txt  README.md  cmake_quick_install.cmake  conanfile.py
appt_feature/: CMakeLists.txt
appt_feature/include/arba/appt/: appinfo.hpp
appt_feature/src/arba/appt/: appinfo.cpp
component/arba-appt/: CMakeLists.txt
component/arba-appt/example/: CMakeLists.txt  multi_task_multi_user_logging_application_example.cpp
component/base/: CMakeLists.txt
component/base/example/: CMakeLists.txt  multi_task_basic_application_example.cpp  multi_task_multi_user_application_example.cpp
component/base/include/arba/appt/application/: application.hpp  execution_status.hpp
component/base/include/arba/appt/application/decorator/: multi_task.hpp
component/base/include/arba/appt/application/module/: basic_module.hpp  module_base.hpp
component/base/include/arba/appt/application/module/decorator/: loop.hpp
component/base/include/arba/appt/util/: integer_id_factory.hpp  log_critical_message.hpp
component/base/src/arba/appt/util/: log_critical_message.cpp
component/base/test/: CMakeLists.txt  basic_application_tests.cpp  event_forwarding_tests.cpp  exception_handling_tests.cpp  execution_status_tests.cpp  loop_basic_module_tests.cpp  loop_module_tests.cpp  multi_task_application_mm_tests.cpp  multi_task_application_sm_tests.cpp  multi_task_basic_application_mm_tests.cpp  multi_task_basic_application_sm_tests.cpp  multi_task_multi_user_application_tests.cpp  multi_user_application_tests.cpp  project_version_tests.cpp
component/base/test/arba-appt-base-ut/: CMakeLists.txt
component/base/test/arba-appt-base-ut/include/arba-appt-base-ut/modules/: bad_crtp_basic_module.hpp  counting_basic_module.hpp
component/multi_user/: CMakeLists.txt
component/multi_user/example/: CMakeLists.txt  multi_task_multi_user_application_example.cpp
component/multi_user/include/arba/appt/application/module/decorator/multi_user/: multi_user.hpp
component/multi_user/include/arba/appt/multi_user/application/decorator/: multi_user.hpp
component/multi_user/include/arba/appt/multi_user/application/module/decorator/: multi_user.hpp
component/multi_user/include/arba/appt/multi_user/user/: user_hash.hpp
component/multi_user/include/arba/appt/user/: user_manager.hpp
component/multi_user/src/arba/appt/multi_user/user/: user.cpp
component/multi_user/test/: CMakeLists.txt  multi_task_multi_user_application_tests.cpp  multi_user_application_tests.cpp  user_hash_tests.cpp  user_manager_tests.cpp  user_set_tests.cpp
component/spdlogging/: CMakeLists.txt
component/spdlogging/example/: CMakeLists.txt  logging_application_example.cpp  multi_task_logging_application_example.cpp  multi_task_multi_user_logging_application_example.cpp
component/spdlogging/include/arba/appt/application/decorator/spdlogging/: spdlogging.hpp
component/spdlogging/include/arba/appt/application/module/decorator/spdlogging/: spdlogging.hpp
component/spdlogging/include/arba/appt/spdlogging/application/decorator/: spdlogging.hpp
component/spdlogging/include/arba/appt/spdlogging/application/module/decorator/: spdlogging.hpp
component/spdlogging/include/arba/appt/spdlogging/util/: logging_macro.hpp  spdlog_helper.hpp
component/spdlogging/src/arba/appt/application/decorator/spdlogging/: spdlogging.cpp
component/spdlogging/src/arba/appt/application/module/decorator/spdlogging/: spdlogging.cpp
component/spdlogging/src/arba/appt/spdlogging/application/decorator/: spdlogging.cpp
component/spdlogging/src/arba/appt/spdlogging/application/module/decorator/: spdlogging.cpp
component/spdlogging/src/arba/appt/spdlogging/util/: spdlog_helper.cpp
component/spdlogging/src/arba/appt/util/spdlogging/: spdlog_helper.cpp
component/spdlogging/test/: CMakeLists.txt  exception_handling_with_spdlog_tests.cpp  logging_tests.cpp
component/standard/: CMakeLists.txt
component/standard/example/: CMakeLists.txt  multi_task_application_example.cpp
component/standard/include/arba/appt/: version.hpp.in
component/standard/include/arba/appt/application/standard/: application.hpp
component/standard/include/arba/appt/standard/application/: application.hpp
component/standard/include/arba/appt/standard/application/module/: module.hpp
component/standard/test/: CMakeLists.txt  application_tests.cpp  event_forwarding_tests.cpp  multi_task_application_mm_tests.cpp  multi_task_application_sm_tests.cpp
component/standard/test/arba-appt-standard-ut/: CMakeLists.txt
component/standard/test/arba-appt-standard-ut/include/arba-appt-standard-ut/modules/: counting_module.hpp
example/: CMakeLists.txt  logging_application_example.cpp  logging_multi_task_application_example.cpp  multi_task_application_example.cpp  multi_task_multi_user_application_example.cpp  multi_task_multi_user_logging_application_example.cpp  program_args_example.cpp
example/basic_cmake_project/: CMakeLists.txt  basic_cmake_project.cpp  main.cpp
include.in/: version.hpp
src/: application.cpp  application_module.cpp  logger_helper.cpp  (+11 more)
test/: CMakeLists.txt  application_tests.cpp  delta_time_tests.cpp  event_forwarding_tests.cpp  exception_handling_tests.cpp  exception_handling_with_spdlog_tests.cpp  execution_status_tests.cpp  format_time_point_tests.cpp  integer_id_factory_tests.cpp  logging_tests.cpp  loop_module_tests.cpp  multi_task_application_mm_tests.cpp  multi_task_application_sm_tests.cpp  multi_task_application_tests.cpp  multi_task_application_tests_2.cpp  multi_task_multi_user_application_tests.cpp  multi_user_application_tests.cpp  multi_user_multi_task_application_tests.cpp  program_args_tests.cpp  project_version_tests.cpp  trinum_versioned_tests.cpp  user_hash_tests.cpp  user_manager_tests.cpp  user_set_tests.cpp
test/arba-appt-ut/: CMakeLists.txt
test/include/arba-appt-ut/modules/: bad_crtp_module.hpp  counting_module.hpp
test/include/arba-appt-ut/util/: text_file_content.hpp
test/modules/: bad_crtp_module.hpp  counting_module.hpp
test/util/: stream_capture.hpp  text_file_contents.hpp
(+92 files in other folders)
